# idtp

./: .gitignore  CHANGELOG.md  README.md  rustfmt.toml
c/: CMakeLists.txt
docs/: SPECIFICATION.md
docs/archive/: idtp-v1.0.0.md
examples/c/: idtp_example.c
examples/rust/: idtp_example.rs
examples/rust/idtp_example/: Cargo.toml
examples/rust/idtp_example/src/: main.rs
rust/idtp/src/: header.rs  idtp.rs  lib.rs
rust/idtp/tests/: integration_test.rs
src/c/include/: idtp.h
src/rust/idtp/: Cargo.toml
src/rust/idtp/src/: crypto.rs  frame.rs  header.rs  lib.rs  macros.rs  payload.rs
src/rust/idtp/tests/: integration_test.rs
