# SPDX-License-Identifier: Apache-2.0.
# Copyright (C) 2025-present idtp project and contributors.

# Project package info section.
[package]
name        = "idtp_example"
version     = "2.0.0"
description = "IMU Data Transfer Protocol usage example"
authors     = ["Alexander <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/idtp/examples/rust/idtp_example"
license     = "Apache-2.0"
edition     = "2024"

# Project dependencies section.
[dependencies]
idtp = { git = "https://github.com/alkuzin/idtp", version = "2.0.0", features = ["software_impl"] }
