# SPDX-License-Identifier: Apache-2.0.
# Copyright (C) 2025-present idtp project and contributors.

# Project package info section.
[package]
name        = "idtp"
version     = "3.1.0"
description = "IMU Data Transfer Protocol implementation"
authors     = ["Alexander <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/idtp"
license     = "Apache-2.0"
edition     = "2024"

# Project features section.
[features]
# Features that used by default.
default = ["std_payloads"]
# Feature to enable software-based calculation for CRC & HMAC.
software_impl = ["dep:crc", "dep:hmac", "dep:sha2"]
# Feature that enables standard payloads.
std_payloads = []

# Project dependencies section.
[dependencies]
# Zerocopy makes zero-cost memory manipulation effortless.
zerocopy = { version = "0.8", features = ["derive"] }
# Rust implementation of CRC.
crc = { version = "3.4.0", optional = true }
# Generic implementation of Hash-based Message Authentication Code (HMAC).
hmac = { version = "0.12.1", optional = true }
# An implementation of the SHA-2 cryptographic hash algorithms.
sha2 = { version = "0.10.9", optional = true, default-features = false }

# Executable files section.
[[bin]]
name = "idtp_example"
path = "../../../examples/rust/idtp_example.rs"
required-features = ["software_impl"]
